# NLP_Agents_101

./: README.md  pyproject.toml
data/vectorstore/: my_store.pkl
data/vectorstores/: my_docs.pkl
prompts/: agent_orchestrator_system.txt  chatbot_system.txt  rag_context_template.txt  rag_grounded_context_template.txt  rag_system.txt
scripts/: check_warmup.py  session6_rag_chatbot.py  test_agent_debug.py  test_parse.py
scripts/prompts/: agent_single_system.txt  agent_worker_system.txt  chatbot_v1_system.txt  chatbot_v2_system.txt  prompt_playground_task.txt  tool_call_json_system.txt
scripts/scripts/: pdf_chatbot.py  pdf_chatbot_enhanced.py  session4_chatbot.py
src/chatbot/: models.py  prompts.py  service.py
src/rag/: chunking.py  embeddings.py  ingestion.py  memory.py  nlp_basics.py  production_service.py  retrieval.py  service.py  session2_demo.py  vectorstore.py
tools/: __init__.py  math_tools.py  notes.py
ui/: app.py  chatbot_app.py  rag_chatbot_app.py
utils/: db.py  decorators.py  exceptions.py  llm.py  logger.py  memory.py  memory_profiles.py  messages.py  prompt_loader.py  prompting.py  settings.py  validation.py  warmup.py
