[tool.poetry]
name = "nlp-llm-agents"
version = "0.1.0"
description = "Course repo: NLP, LLMs, RAG, Agents"
authors = ["Course Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "src" }, { include = "utils" }, { include = "tools" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = "^1.37.0"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
httpx = "^0.27.2"
rich = "^13.8.1"
numpy = "^2.0.2"
scikit-learn = "^1.5.2"
transformers = "^4.44.2"
torch = "^2.4.1"
accelerate = "^1.12.0"
sentencepiece = "^0.2.0"
sentence-transformers = "^3.0.1"
langchain-core = "^1.0.0"
langgraph = "^1.0.0"
langgraph-prebuilt = "^1.0.5"
langchain-openai = "^1.1.6"
pypdf = "^5.1.0"
huggingface-hub = ">=0.23.2,<1.0"
pypdf2 = "^3.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
black = "^24.8.0"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
